--- a/bin/guidedrubric/guidedrubric/static/css/guidedrubric.css
+++ b/bin/guidedrubric/guidedrubric/static/css/guidedrubric.css
@@ -1,9 +1,39 @@
 /* CSS for GuidedRubricXBlock */
 
-.guidedrubric_block .count {
-    font-weight: bold;
-}
-
-.guidedrubric_block p {
-    cursor: pointer;
-}
+.overlay {
+    display:none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right:0;
+    width: 100%;
+    height: 100%;
+    background-color: white !important; /* Adjust the background color and opacity as needed */
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Adjust the z-index to make sure it's above other elements */
+  }
+  .lds-dual-ring {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+    }
+    .lds-dual-ring:after {
+      content: " ";
+      display: block;
+      width: 64px;
+      height: 64px;
+      margin: 8px;
+      border-radius: 50%;
+      border: 6px solid #002E5F ;
+      border-color: #002E5F transparent #002E5F transparent;
+      animation: lds-dual-ring 1.2s linear infinite;
+    }
+    @keyframes lds-dual-ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
